Fixed favorite symbol mis alignment

--- a/src/widget/period-bar/index.less
+++ b/src/widget/period-bar/index.less
@@ -263,7 +263,8 @@
 
   .favorite-symbols {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
     gap: 8px;
     padding: 0 4px;
     overflow-x: auto;
@@ -273,7 +274,6 @@
     display: flex;
     flex-direction: row;
     gap: 8px;
-    padding-bottom: 4px;
   }
 
   .symbol-item {
